Fri Nov  7 12:02:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.pl:
          Removed all specific VxWorks support, we are using the generic test
          framework now

Fri Nov  7 09:47:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_main.cpp:
          Use ACE_TEXT_GetModuleFileName to get the executable name
          on Windows CE

Fri Nov  7 09:11:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Makefile.am:
          Removed references to CE_fostream

Thu Nov  6 19:26:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-WinCE.h:
          CE doesn't have FILE_SHARE_DELETE like regular windows as default
          file permissions

        * tests/CDR_File_Test.cpp:
          WinCE does have ostream, so removed CE_fostream and also removed the
          code that tries to unlink the file directly after it has been created.
          It really depends also on the file system whether this works or not.

        * tests/CE_fostream.cpp:
        * tests/CE_fostream.h:
          Removed

        * tests/tests.mpc:
          Removed CE_fostream

Thu Nov  6 18:08:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-openvms.h:
          Added ACE_LACKS_ISBLANK/ACE_LACKS_ISCTYPE

        * ace/config-qnx-rtp-62x.h:
          Added ACE_LACKS_ISCTYPE

        * ace/OS_NS_unistd.h:
          Doxygen changes

Wed Nov  5 15:11:17 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/SOCK_SEQPACK_Association.cpp (get_remote_addrs): Changed
          ACE_USES_SOLARIS_SCTP to ACE_HAS_VOID_PTR_SCTP_GETPADDRS.
          Thanks to Johnny for this suggestion.

Thu Nov  6 14:33:00 UTC 2008  Simon Massey <sma at prismtech dot com>

        * tests/Process_Test.cpp:
          Use pid_t, ACE_HANDLE and ACE_INVALID_HANDLE;

Thu Nov  6 14:10:00 UTC 2008  Simon Massey <sma at prismtech dot com>

        * tests/Process_Test.cpp: