@@ -1,3 +1,11 @@
+Fri Nov  7 13:30:00 UTC 2008  Simon Massey <sma at prismtech dot com>
+
+        * tests/Process_Test.cpp:
+          Like an idiot I didn't invert the original ACE_ASSERT test when
+          I converted them to if () go_and_complain;
+          Also another attempt to correct for wide character ACE_TCHAR
+          versions.
+
 Fri Nov  7 12:02:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/run_test.pl:
